@startuml

hide circle
skinparam classAttributeIconSize 0

package "budgetbuddy.storage" {
    class StorageManager {
        <u>- FILE_PATH: String</u>
        + save(manager: BudgetManager): void
        + load(manager: BudgetManager): void
    }
}

package "budgetbuddy.model" {
    class BudgetManager {
        - budgets: HashMap<String, Budget>
        - alert: Alert
        + addExpenseToBudget(category: String, amount: double, description: String, time: String): void
        + setBudgetAlert(amount: double): void
        + getBudgetAlert(): Alert
        + getBudgets(): Map<String, Budget>
    }

    class Budget {
        + getExpenses(): List<Expense>
        + addExpense(e: Expense): void
        + getLimit(): double
    }

    class Expense {
        + getAmount(): double
        + getDescription(): String
        + getDateTimeString(): String
    }

    class Alert {
        + setAlert(amount: double): void
        + checkAlert(totalExpenses: double): void
        + getAlertAmount(): double
    }
}

' Relationships
StorageManager --> BudgetManager : uses
StorageManager --> Budget : uses
StorageManager --> Expense : uses
BudgetManager "1" *-- "1..*" Budget : budgets
Budget "1..2" *-- "0..*" Expense : expenses
BudgetManager *--  "1"Alert : alert


@enduml
